# fozzy-ide

./: .gitignore  README.md  fozzy.toml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
artifacts/: smoke.trace.fozzy
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: activity_service.rs  app_state.rs  artifact_service.rs  commands.rs  db.rs  error.rs  events.rs  file_tree_service.rs  fozzy_cli_service.rs  fs_service.rs  lib.rs  lsp_service.rs  main.rs  models.rs  project_scanner.rs  run_orchestrator.rs  scenario_service.rs  settings_service.rs  telemetry_service.rs  terminal_service.rs  workspace_registry.rs
src/components/: app-bootstrap.tsx
src/components/domain/: code-editor.tsx  file-tree.tsx  mini-chart.tsx
src/components/layout/: app-shell.tsx  bottom-drawer.tsx  command-palette.tsx  notice-center.tsx  sidebar-nav.tsx  topbar.tsx  workspace-switcher.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dropdown.tsx  empty-state.tsx  index.ts  input.tsx  spinner.tsx  status-dot.tsx  tabs.tsx  tooltip.tsx
src/data/: provider.ts
src/data/mocks/: activity.ts  artifacts.ts  runs.ts  (+8 more)
src/hooks/: use-data.ts  use-events.ts
src/lib/: debug-log.ts  errors.ts  frontend-diagnostics.ts  project-import.ts  query-client.ts  utils.ts
src/pages/: artifacts.tsx  editor.tsx  overview.tsx  projects.tsx  run-detail.tsx  runs.tsx  settings.tsx  telemetry.tsx  tests.tsx  trace-detail.tsx  traces.tsx  trends.tsx
src/stores/: app-store.ts  editor-store.ts
src/types/: backend-contracts.ts  index.ts
(+1 files in other folders)
